--- a/style.css
+++ b/style.css
@@ -1,692 +1,140 @@
-/* ESTILO GERAL */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Poppins, sans-serif;
 }
 
 body {
-    background-color: #000;
-    height: 100vh;
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-.interface {
-    max-width: 1280px;
-    margin: 0 auto;
-}
-
-.flex {
-    display: flex;
-}
-
-.btn-contato button {
-    padding: 10px 40px;
-    font-size: 28px;
-    font-weight: 600;
-    background-color: #a1dcf0;
-    border: 0;
-    border-radius: 30px;
-    cursor: pointer;
-    transition: .2s;
-}
-
-.btn-contato button:hover {
-    box-shadow: 0px 0px 8px #a2bcc5;
-}
-
-button:hover,
-form .btn-enviar input:hover {
-    box-shadow: 0px 0px 8px #a1dcf0;
-    transform: scale(1.05);
-}
-
-h2.título {
-    color: #fff;
-    font-size: 38px;
-    text-align: center;
-}
-
-h2.título span {
-    color: #a1dcf0;
-
-}
-
-/* ESTILO DO CABEÇALHO */
-header {
-    padding: 30px 4%;
-}
-
-header>.interface {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 25px;
-}
-
-header a {
-    color: #a1dcf0;
-    text-decoration: none;
-    display: inline-block;
-    transition: .2s;
-}
-
-header nav.menu-desktop a:hover {
-    color: #fff;
-    transform: scale(1.05);
-}
-
-header nav ul {
-    list-style-type: none;
-}
-
-header nav.menu-desktop ul li {
-    display: inline-block;
-    padding: 0 40px;
-}
-
-/* ESTILO MENU MOBILE */
-<<<<<<< HEAD
-.menu-desktop{
-    display: none;
-}
-
-.btn-abrir-menu i {
-    color: #a1dcf0;
-    font-size: 40px;
-    cursor: pointer;
-}
-
-.menu-mobile {
-=======
-.btn-abrir-menu i{
-    color: #a1dcf0;
-    font-size: 40px;
-}
-
-.menu-mobile{
->>>>>>> escola/main
-    background-color: #283641;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 99999;
-    width: 0%;
-    overflow: hidden;
-    transition: .5s;
-}
-
-<<<<<<< HEAD
-.menu-mobile.abrir-menu {
-    width: 70%;
-}
-
-.menu-mobile.abrir-menu~.overlay-menu {
-    display: block;
-}
-
-.menu-mobile .btn-fechar {
-    padding: 20px 5%;
-}
-
-.menu-mobile .btn-fechar {
-    color: #a1dcf0;
-    font-size: 38px;
-    cursor: pointer;
-}
-
-.menu-mobile nav ul {
-    text-align: right;
-}
-
-.menu-mobile nav ul li a {
-=======
-.menu-mobile.abrir-menu{
-    width: 25%;
-}
-
-.menu-mobile.abrir-menu ~ .overlay-menu{
-    display: block;
-}
-
-.menu-mobile .btn-fechar{
-    padding: 20px 5%;
-}
-
-.menu-mobile .btn-fechar{
-    color: #a1dcf0;
-    font-size: 38px;
-}
-
-.menu-mobile nav ul{
-    text-align: right;
-}
-
-.menu-mobile nav ul li a{
->>>>>>> escola/main
-    color: #fff;
-    font-size: 20px;
-    font-weight: 300;
-    padding: 20px 8%;
-    display: block;
-<<<<<<< HEAD
-    cursor: pointer;
-}
-
-.menu-mobile nav ul li a:hover {
-=======
-}
-
-.menu-mobile nav ul li a:hover{
->>>>>>> escola/main
-    background-color: #a2bcc5;
-    color: #000;
-}
-
-<<<<<<< HEAD
-.overlay-menu {
-=======
-.overlay-menu{
->>>>>>> escola/main
-    background-color: #000000df;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 88888;
-    display: none;
-}
-
-/* ESTILO TOPO DO SITE */
-section.topo-do-site {
-    padding: 40px 4%;
-}
-
-section.topo-do-site .flex {
-    align-items: center;
-    justify-content: center;
-    gap: 90px;
-}
-
-.topo-do-site h1 {
-    color: #fff;
-    font-size: 58px;
-    line-height: 40px;
-}
-
-.topo-do-site .txt-topo-site h1 span {
-    color: #a2bcc5;
-    font-size: 98px;
-}
-
-.topo-do-site .txt-topo-site p {
-    color: #fff;
-    margin: 40px 4%;
-    font-size: 21px;
-    text-align: justify;
-}
-
-.topo-do-site .img-topo-site img {
-    position: relative;
-    animation: flutuar 1s ease-in-out infinite alternate;
-}
-
-@keyframes flutuar {
-    0% {
-        top: 0;
-    }
-
-    100% {
-        top: 30px;
-    }
-}
-
-/* ESTILO DAS ESPECIALIDADES */
-section .Especialidades {
-    padding: 90px 4%;
-}
-
-section.Especialidades .flex {
-    gap: 60px;
-}
-
-.Especialidades .especialidades-box {
-    color: #fff;
-    padding: 40px;
-    border-radius: 20px;
-    margin-top: 40px;
-    transition: .2s;
-}
-
-.Especialidades .especialidades-box:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 30px #ffffff78;
-}
-
-.Especialidades .especialidades-box i {
-    font-size: 55px;
-    color: #a1dcf0;
-}
-
-.Especialidades .especialidades-box h3 {
-    font-size: 18px;
-    margin: 15px 2%;
-    display: flex;
-}
-
-/* ESTILO DO SOBRE */
-section.sobre {
-    padding: 80px 4%;
-}
-
-section.sobre .flex {
-    align-items: center;
-    gap: 60px;
-}
-
-.sobre .txt-sobre {
-    color: #fff;
-}
-
-.sobre .txt-sobre h2 {
-    font-size: 40px;
-    line-height: 40px;
-    margin-bottom: 30px;
-}
-
-.sobre .txt-sobre h2 span {
-    color: #a1dcf0;
-    display: block;
-}
-
-.sobre .txt-sobre p {
-    margin: 20px 0;
-    text-align: justify;
-    font-size: 20px;
-}
-
-.btn-social button {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border: none;
-    background-color: #a1dcf0;
-    font-size: 15px;
-    cursor: pointer;
-    margin: 0 05px;
-    transition: .2s;
-}
-
-/* ESTILO DO PORTFÓLIO */
-section.Portfólio {
-    padding: 80px 4%;
-    box-shadow: 0 0 40px 10px #ffffff1d;
-}
-
-section.Portfólio .flex {
-    justify-content: space-around;
-    margin-top: 60px;
-}
-
-.img-port {
-    width: 360px;
-    height: 460px;
-    background-size: cover;
-    background-position: 100% 0%;
-    transition: 6s;
-    cursor: pointer;
-    border-radius: 40px;
-    position: relative;
-    background-color: #283641;
-}
-
-.img-port:hover {
-    background-position: 100% 100%;
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #000000b8;
-    border-radius: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 24px;
-    font-weight: 600;
-    color: #fff;
-    opacity: 0;
-    transition: .5s;
-}
-
-.overlay:hover {
-    opacity: 1;
-}
-
-/* ESTILO DO FORMULÁRIO DE CONTATO */
-.form-container {
-    background-position: center;
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  background: #0f172a;
+  color: white;
 }
 
 .container {
-    padding: 80px 4%;
-    max-width: 600px;
-    margin: 0 auto;
+  width: 90%;
+  max-width: 1100px;
+  margin: auto;
+  padding: 60px 0;
 }
 
-form {
-    background-color: #1c2125;
-    max-width: 550px;
-    height: 500px;
-    padding: 30px;
-    border-radius: 15px;
+header {
+  background: #020617;
+  position: sticky;
+  top: 0;
+  z-index: 99;
 }
 
-form h2 {
-    text-align: center;
-    font-size: 30px;
-    color: #a1dcf0;
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-form p {
-    text-align: center;
-    margin: 20px 0;
-    margin-top: 10px;
-    color: #a1dcf0;
-    font-size: 20px;
+nav a {
+  margin-left: 20px;
+  text-decoration: none;
+  color: white;
+  font-weight: 600;
+  transition: 0.3s;
 }
 
-.input-single {
-    position: relative;
-    margin: 30px 0;
+nav a:hover .hero {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
 }
 
-.input-single label {
-    position: absolute;
-    left: 0;
-    bottom: 5px;
-    color: #fff;
-    margin: 08px;
-    transition: all 0.3s;
-    cursor: text;
-}
-
-.input {
-    width: 100%;
-    border: 0;
-    border-bottom: 2px solid #a2bcc5;
-    padding: 7px;
-    font-size: 18px;
-    background-color: #283641;
-    border-radius: 15px;
-    color: #fff;
-    outline: none;
-    resize: none;
-}
-
-form .input-single .input:focus~label,
-form .input-single .input:valid~label {
-    transform: translateY(-25px);
-    font-size: 14px;
-    color: #a1dcf0;
-}
-
-.btn-enviar {
-    width: 100%;
-    text-align: center;
-}
-
-form input[type=submit] {
-    padding: 10px 40px;
-    border: 0;
-    border-radius: 20px;
-    background-color: #a2bcc5;
-    color: #000;
-    font-size: 18px;
-    font-weight: 800;
-<<<<<<< HEAD
-    cursor: pointer;
-=======
->>>>>>> escola/main
-}
-
-/* PÁGINA OBRIGADA */
-.main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background-color: #283641;
-    flex-direction: column;
-}
-
-.text {
-    font-size: 45px;
-    color: #a1dcf0;
-    margin-bottom: 30px;
-}
-
-.paragrafo {
-    color: #ffffff;
-    margin-bottom: 70px;
-    font-size: 25px;
+.hero-img {
+  width: 260px;
+  border-radius: 20px;
+  box-shadow: 0 0 30px rgba(56, 189, 248, 0.3);
 }
 
 .btn {
-    padding: 10px 40px;
-    font-size: 30px;
-    font-weight: 800;
-    background-color: #a2bcc5;
-    border: 0;
-    border-radius: 30px;
-    cursor: pointer;
-    transition: .2s;
-    color: #000000;
-    text-decoration: none;
+  display: inline-block;
+  margin-top: 20px;
+  background: #38bdf8;
+  padding: 12px 26px;
+  border-radius: 10px;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  transition: 0.3s;
 }
 
 .btn:hover {
-    box-shadow: 0px 0px 8px #a2bcc5;
+  transform: scale(1.08);
 }
 
-/* ESTILO DO RODAPÉ */
-footer {
-    padding: 40px 4%;
-    box-shadow: 0 0 40px 10px #ffffff1d;
+.section-title {
+  text-align: center;
+  margin-bottom: 40px;
 }
 
-footer .flex {
-    justify-content: space-between;
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  gap: 20px;
 }
 
-footer .line-footer {
-    padding: 10px 0;
+.card {
+  background: #020617;
+  padding: 30px;
+  text-align: center;
+  border-radius: 12px;
+  transition: 0.3s;
 }
 
-.borda {
-    border-top: 2px solid #a1dcf0;
+.card:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
 }
 
-footer .line-footer p i {
-    color: #a1dcf0;
-    font-size: 25px;
-    padding: 10px 05px;
+.project img {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 10px;
 }
 
-footer .line-footer p a {
-    color: #fff;
-    font-size: 15px;
+.sobre {
+  display: flex;
+  gap: 40px;
+  align-items: center;
 }
 
-#voltar-topo button {
-    text-decoration: none;
-    font-size: 30px;
-    color: #000;
-    background-color: #a1dcf0;
-    padding: 10px;
-    border-radius: 50%;
-    border: none;
-    position: fixed;
-    right: 10px;
-    bottom: 10px;
-    cursor: pointer;
-    transition: .2s;
+.sobre img {
+  width: 240px;
+  border-radius: 14px;
 }
 
-#voltar-topo button:hover {
-    box-shadow: 0px 0px 8px #a2bcc5;
+.social {
+  text-align: center;
+  font-size: 32px;
 }
 
-button:hover,
-form #voltar-topo input:hover {
-    box-shadow: 0px 0px 8px #a1dcf0;
-    transform: scale(1.05);
+.social a {
+  margin: 0 12px;
+  color: white;
+  transition: 0.3s;
 }
 
-@media screen and (max-width: 1296px) {
+.social a:hover footer {
+  text-align: center;
+  padding: 30px;
+  background: #020617;
+}
 
-    /* CLASSES GERAIS */
-    .flex {
-        flex-direction: column;
-    }
+/* RESPONSIVO */
 
-    h2.titulo {
-        font-size: 30px;
-        line-height: 30px;
-    }
+@media (max-width: 768px) {
+  .hero {
+    flex-direction: column;
+    text-align: center;
+  }
 
-    /* CABEÇALHO */
-    .menu-desktop {
-        display: none;
-    }
-
-    /* TOPO DO SITE */
-    section.topo-do-site .flex {
-        gap: 40px;
-    }
-
-    section.topo-do-site {
-        padding: 20px 8%;
-    }
-
-    .topo-do-site h1 {
-        font-size: 38px;
-    }
-
-<<<<<<< HEAD
-    .topo-do-site .txt-topo-site p {
-        text-align: left;
-    }
-
-=======
->>>>>>> escola/main
-    .topo-do-site .img-topo-site img {
-        width: 100%;
-    }
-
-    /* ESTILO DAS ESPECIALIDADES */
-    section .Especialidades {
-        padding: 40px 8%;
-    }
-
-    .Especialidades .especialidades-box i {
-<<<<<<< HEAD
-        padding: 0 40%;
-        font-size: 60px;
-    }
-
-    .Especialidades .especialidades-box h3 {
-        padding: 0 38%;
-=======
-        font-size: 60px;
-    }
-    
-    .Especialidades .especialidades-box h3 {
->>>>>>> escola/main
-        font-size: 23px;
-    }
-
-    /* ESTILO DO SOBRE */
-    section.sobre {
-        padding: 40px 8%;
-    }
-
-    .sobre .txt-sobre h2 {
-        font-size: 34px;
-        line-height: 35px;
-<<<<<<< HEAD
-        text-align: left;
-    }
-
-    .sobre .txt-sobre p {
-        margin: 20px 0;
-        text-align: left;
-        font-size: 20px;
-=======
-        text-align: center;
->>>>>>> escola/main
-    }
-
-    .btn-social {
-        text-align: center;
-    }
-
-    .img-sobre img {
-        width: 100%;
-    }
-
-    /* ESTILO DO PORTFÓLIO */
-    section.Portfólio {
-        padding: 40px 8%;
-    }
-
-    .img-port {
-        width: 100%;
-        max-width: 360px;
-        margin: 0 auto;
-    }
-
-    section.Portfólio .flex {
-        gap: 60px;
-    }
-
-    /* ESTILO DO FORMULÁRIO DE CONTATO */
-    .container {
-        padding: 80px 8%;
-    }
-
-    form {
-        height: 570px;
-    }
-
-    /* RODAPÉ */
-    footer .flex {
-        flex-direction: column;
-        gap: 30px;
-    }
-
-    footer .line-footer {
-        text-align: center;
-    }
-<<<<<<< HEAD
-
-    /* ESTILO DO FORMULÁRIO DE CONTATO */
-    .main {
-        padding: 90px 8%;
-    }
-=======
->>>>>>> escola/main
+  .sobre {
+    flex-direction: column;
+    text-align: center;
+  }
 }
